delete comments, rewrite classes

--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
             <div class="product__slide slide6"></div>
           </div>
           <div class="product__controls">
-            <label for="slide1"></label>
-            <label for="slide2"></label>
-            <label for="slide3"></label>
-            <label for="slide4"></label>
-            <label for="slide5"></label>
-            <label for="slide6"></label>
+            <label class="product__label" for="slide1"></label>
+            <label class="product__label" for="slide2"></label>
+            <label class="product__label" for="slide3"></label>
+            <label class="product__label" for="slide4"></label>
+            <label class="product__label" for="slide5"></label>
+            <label class="product__label" for="slide6"></label>
           </div>
         </div>
         <div class="product__details description">
