add favicon, change tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" type="image/png" sizes="141x134" href="img/DSK_logo.png" />
     <title>ДСК Столица</title>
   </head>
   <body class="page__body">
@@ -68,13 +70,13 @@
         </ul>
         <ul class="product__info info">
           <li class="info__item">
-            <a class="info__link info__link--current" href="#">Все о товаре</a>
+            <button class="info__link info__link--current" type="button">Все о товаре</button>
           </li>
           <li class="info__item">
-            <a class="info__link" href="#">Характеристики</a>
+            <button class="info__link" type="button">Характеристики</button>
           </li>
           <li class="info__item">
-            <a class="info__link" href="#">Обзор</a>
+            <button class="info__link" type="button">Обзор</button>
           </li>
         </ul>
         <div class="product__slider-wrapper">
